--- a/YellowstonePathology/UserInterface.csproj
+++ b/YellowstonePathology/UserInterface.csproj
@@ -43,7 +43,7 @@
     <MapFileExtensions>false</MapFileExtensions>
     <CreateWebPageOnPublish>true</CreateWebPageOnPublish>
     <WebPage>publish.htm</WebPage>
-    <ApplicationRevision>213</ApplicationRevision>
+    <ApplicationRevision>217</ApplicationRevision>
     <ApplicationVersion>10.1.6.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
@@ -1110,6 +1110,11 @@
     <Compile Include="Business\Test\LynchSyndrome\LSEColorectalResult32.cs" />
     <Compile Include="Business\Test\LynchSyndrome\LSEColorectalResult42.cs" />
     <Compile Include="Business\Test\MUM1ByIHC\MUM1ByIHCTest.cs" />
+    <Compile Include="Business\Test\PDL122C3\PDL122C3EpicObxView.cs" />
+    <Compile Include="Business\Test\PDL122C3\PDL122C3SystemGeneratedAmendmentText.cs" />
+    <Compile Include="Business\Test\PDL122C3\PDL122C3Test.cs" />
+    <Compile Include="Business\Test\PDL122C3\PDL122C3TestOrder.cs" />
+    <Compile Include="Business\Test\PDL122C3\PDL122C3WordDocument.cs" />
     <Compile Include="Business\Test\PlateletAssociatedAntibodies\PlateletAssociatedAntibodiesEPICOBXView.cs" />
     <Compile Include="Business\Test\ROS1ByFISH\ROS1ByFISHPositiveResult.cs" />
     <Compile Include="Business\Test\IRF4F\IRF4FTest.cs" />
@@ -3610,9 +3615,13 @@
       <DependentUpon>MissingInformationResultPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="UI\Test\MissingInformationResultPath.cs" />
+    <Compile Include="UI\Test\PDL1SP22C3ResultPage.xaml.cs">
+      <DependentUpon>PDL1SP22C3ResultPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="UI\Test\PDL1SP142ResultPage.xaml.cs">
       <DependentUpon>PDL1SP142ResultPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="UI\Test\PDL1SP22C3ResultPath.cs" />
     <Compile Include="UI\Test\PDL1SP142ResultPath.cs" />
     <Compile Include="UI\Test\RASRAFPanelResultPage.xaml.cs">
       <DependentUpon>RASRAFPanelResultPage.xaml</DependentUpon>
@@ -5490,6 +5499,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="UI\Test\MissingInformationResultPage.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="UI\Test\PDL1SP22C3ResultPage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
