Change prcGetAccession to _1 removing forXML, change AODocumentBuilder to match.

--- a/YellowstonePathology/UserInterface.csproj
+++ b/YellowstonePathology/UserInterface.csproj
@@ -3035,7 +3035,10 @@
     <Compile Include="MySQLMigration\NonpersistentColumnDef.cs" />
     <Compile Include="MySQLMigration\NonpersistentTableDef.cs" />
     <Compile Include="MySQLMigration\NonpersistentTableDefCollection.cs" />
+    <Compile Include="MySQLMigration\NonpersistentTableDefCytologyDiagnosis.cs" />
     <Compile Include="MySQLMigration\NonpersistentTableDefPanelSet.cs" />
+    <Compile Include="MySQLMigration\NonpersistentTableDefStVincent.cs" />
+    <Compile Include="MySQLMigration\NonpersistentTableDefTest.cs" />
     <Compile Include="UI\AmendmentPage.xaml.cs">
       <DependentUpon>AmendmentPage.xaml</DependentUpon>
     </Compile>
