--- a/YellowstonePathology/Properties/Settings.settings
+++ b/YellowstonePathology/Properties/Settings.settings
@@ -1,5 +1,5 @@
 <?xml version='1.0' encoding='iso-8859-1'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="YellowstonePathology.UI.Properties" GeneratedClassName="Settings">
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="YellowstonePathology.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
     <Setting Name="LocalApplicationFolder" Type="System.String" Scope="Application">
@@ -37,6 +37,24 @@
     </Setting>
     <Setting Name="ServerAFFFile" Type="System.String" Scope="Application">
       <Value Profile="(Default)">\\ypiidc\YPIILIS\Dictionary\ypi-custom.aff</Value>
+    </Setting>
+    <Setting Name="CurrentConnectionString" Type="System.String" Scope="User">
+      <Value Profile="(Default)">Data Source=TestSQL;Initial Catalog=YPIData;Integrated Security=True</Value>
+    </Setting>
+    <Setting Name="ChangeDBPassword" Type="System.String" Scope="User">
+      <Value Profile="(Default)">changedb</Value>
+    </Setting>
+    <Setting Name="SpecimenLogScannedDocumentFilePath" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">\\\\cfileserver\\Documents\\SpecimenLog\\</Value>
+    </Setting>
+    <Setting Name="ServerDictationFolder" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">\\\\cfileserver\\documents\\Dictation\\</Value>
+    </Setting>
+    <Setting Name="MySqlConnectionString" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">Server = 10.1.2.26; Uid = sqldude; Pwd = 123Whatsup; Database = lis;</Value>
+    </Setting>
+    <Setting Name="SqlServerConnectionString" Type="System.String" Scope="User">
+      <Value Profile="(Default)">Data Source=TestSQL;Initial Catalog=YPIData;Integrated Security=True</Value>
     </Setting>
   </Settings>
 </SettingsFile>
