--- a/YellowstonePathology/app.config
+++ b/YellowstonePathology/app.config
@@ -2,10 +2,61 @@
 <configuration>
     <configSections>         
         <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+            <section name="YellowstonePathology.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
             <section name="YellowstonePathology.UI.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
+        </sectionGroup>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="YellowstonePathology.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
     </configSections>
     <applicationSettings>
+        <YellowstonePathology.Properties.Settings>
+            <setting name="LocalApplicationFolder" serializeAs="String">
+                <value>C:\Program Files\Yellowstone Pathology Institute\</value>
+            </setting>
+            <setting name="LocalDictationFolder" serializeAs="String">
+                <value>C:\Program Files\Yellowstone Pathology Institute\Dictation\</value>
+            </setting>
+            <setting name="LocalLoginDataFolder" serializeAs="String">
+                <value>C:\Program Files\Yellowstone Pathology Institute\Application\</value>
+            </setting>
+            <setting name="LocalHistologyAlertFile" serializeAs="String">
+                <value>C:\Program Files\Yellowstone Pathology Institute\HistologyAlert.wav</value>
+            </setting>
+            <setting name="LocalDoneDictationFolder" serializeAs="String">
+                <value>C:\Program Files\Yellowstone Pathology Institute\Dictation\Done\</value>
+            </setting>
+            <setting name="ClientMissingInformationLetterFileName" serializeAs="String">
+                <value>C:\Program Files\Yellowstone Pathology Institute\ClientMissingInformationLetter.doc</value>
+            </setting>
+            <setting name="CytologySlideLabelPrinterName" serializeAs="String">
+                <value>Cytology Slide Label Printer</value>
+            </setting>
+            <setting name="HistologySlideLabelPrinterName" serializeAs="String">
+                <value>Histology Slide Label Printer</value>
+            </setting>
+            <setting name="LocalDICFile" serializeAs="String">
+                <value>C:\Program Files\Yellowstone Pathology Institute\ypi-custom.dic</value>
+            </setting>
+            <setting name="LocalAFFFile" serializeAs="String">
+                <value>C:\Program Files\Yellowstone Pathology Institute\ypi-custom.aff</value>
+            </setting>
+            <setting name="ServerDICFile" serializeAs="String">
+                <value>\\ypiidc\YPIILIS\Dictionary\ypi-custom.dic</value>
+            </setting>
+            <setting name="ServerAFFFile" serializeAs="String">
+                <value>\\ypiidc\YPIILIS\Dictionary\ypi-custom.aff</value>
+            </setting>
+            <setting name="SpecimenLogScannedDocumentFilePath" serializeAs="String">
+                <value>\\\\cfileserver\\Documents\\SpecimenLog\\</value>
+            </setting>
+            <setting name="ServerDictationFolder" serializeAs="String">
+                <value>\\\\cfileserver\\documents\\Dictation\\</value>
+            </setting>
+            <setting name="MySqlConnectionString" serializeAs="String">
+                <value>Server = 10.1.2.26; Uid = sqldude; Pwd = 123Whatsup; Database = lis;</value>
+            </setting>
+        </YellowstonePathology.Properties.Settings>
         <YellowstonePathology.UI.Properties.Settings>
             <setting name="LocalApplicationFolder" serializeAs="String">
                 <value>C:\Program Files\Yellowstone Pathology Institute\</value>
@@ -48,4 +99,17 @@
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/>
   </startup>
+  <userSettings>
+    <YellowstonePathology.Properties.Settings>
+      <setting name="CurrentConnectionString" serializeAs="String">
+        <value>Data Source=TestSQL;Initial Catalog=YPIData;Integrated Security=True</value>
+      </setting>
+      <setting name="ChangeDBPassword" serializeAs="String">
+        <value>changedb</value>
+      </setting>
+      <setting name="SqlServerConnectionString" serializeAs="String">
+        <value>Data Source=TestSQL;Initial Catalog=YPIData;Integrated Security=True</value>
+      </setting>
+    </YellowstonePathology.Properties.Settings>
+  </userSettings>
 </configuration>
