Adding ADT functionality

--- a/YellowstonePathology/UserInterface.csproj
+++ b/YellowstonePathology/UserInterface.csproj
@@ -31,9 +31,9 @@
     <TargetFrameworkProfile />
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
-    <PublishUrl>ls\</PublishUrl>
+    <PublishUrl>\\ypiidc\YPIILIS\Application\</PublishUrl>
     <Install>false</Install>
-    <InstallFrom>Disk</InstallFrom>
+    <InstallFrom>Unc</InstallFrom>
     <UpdateEnabled>true</UpdateEnabled>
     <UpdateMode>Foreground</UpdateMode>
     <UpdateInterval>7</UpdateInterval>
@@ -43,7 +43,7 @@
     <MapFileExtensions>false</MapFileExtensions>
     <CreateWebPageOnPublish>true</CreateWebPageOnPublish>
     <WebPage>publish.htm</WebPage>
-    <ApplicationRevision>257</ApplicationRevision>
+    <ApplicationRevision>270</ApplicationRevision>
     <ApplicationVersion>10.1.6.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
@@ -291,6 +291,8 @@
     <Compile Include="Business\BaseData.cs" />
     <Compile Include="Business\BaseItem.cs" />
     <Compile Include="Business\BaseListItem.cs" />
+    <Compile Include="Business\HL7View\ADTMessage.cs" />
+    <Compile Include="Business\HL7View\ADTMessages.cs" />
     <Compile Include="Business\Billing.Model\BillableObject.cs" />
     <Compile Include="Business\Billing.Model\BillableObjectFactory.cs" />
     <Compile Include="Business\Billing.Model\BillableObjectInHouseMolecular.cs" />
@@ -637,6 +639,9 @@
     <Compile Include="Business\Document\ReportDisclaimer.cs" />
     <Compile Include="Business\Document\ReportDistributionTable.cs" />
     <Compile Include="Business\Document\ReportSaveModeEnum.cs" />
+    <Compile Include="Business\Document\ADTInsuranceDocument.xaml.cs">
+      <DependentUpon>ADTInsuranceDocument.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Business\Document\SVHBillingDocument.xaml.cs">
       <DependentUpon>SVHBillingDocument.xaml</DependentUpon>
     </Compile>
@@ -898,6 +903,8 @@
     <Compile Include="Business\HL7View\Hl7Client.cs" />
     <Compile Include="Business\HL7View\Hl7MessageType.cs" />
     <Compile Include="Business\HL7View\HolyRosaryHealthCare.cs" />
+    <Compile Include="Business\HL7View\GT1.cs" />
+    <Compile Include="Business\HL7View\IN1.cs" />
     <Compile Include="Business\HL7View\IResultView.cs" />
     <Compile Include="Business\HL7View\MshView.cs" />
     <Compile Include="Business\HL7View\ObrView.cs" />
@@ -932,6 +939,7 @@
     <Compile Include="Business\HL7View\Panther\PantherOrderPriorityEnum.cs" />
     <Compile Include="Business\HL7View\Panther\PantherPID.cs" />
     <Compile Include="Business\HL7View\PidView.cs" />
+    <Compile Include="Business\HL7View\PV1.cs" />
     <Compile Include="Business\HL7View\ResultStatus.cs" />
     <Compile Include="Business\HL7View\ResultStatusEnum.cs" />
     <Compile Include="Business\HL7View\ResultViewFactory.cs" />
@@ -3070,6 +3078,9 @@
       <DependentUpon>BillingPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="UI\Billing\BillingPath.cs" />
+    <Compile Include="UI\Billing\ADTPage.xaml.cs">
+      <DependentUpon>ADTPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="UI\Billing\SVHCDMResultDialog.xaml.cs">
       <DependentUpon>SVHCDMResultDialog.xaml</DependentUpon>
     </Compile>
@@ -4906,6 +4917,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <EmbeddedResource Include="Business\Document\ADTInsuranceDocument.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
     <Page Include="Business\Reports\CytologySlideDisposalReport.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -4967,6 +4982,10 @@
       <SubType>Designer</SubType>
     </Page>
     <Page Include="UI\AppMessaging\LockRequestResponseRecievedPage.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="UI\Billing\ADTPage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
