--- a/YellowstonePathology/UserInterface.csproj
+++ b/YellowstonePathology/UserInterface.csproj
@@ -3032,6 +3032,7 @@
     <Compile Include="MySQLMigration\MySqlDataReaderPropertyWriter.cs" />
     <Compile Include="MySQLMigration\NonpersistentColumnDef.cs" />
     <Compile Include="MySQLMigration\NonpersistentTableDef.cs" />
+    <Compile Include="MySQLMigration\NonpersistentTableDefADT.cs" />
     <Compile Include="MySQLMigration\NonpersistentTableDefCollection.cs" />
     <Compile Include="MySQLMigration\NonpersistentTableDefCytologyDiagnosis.cs" />
     <Compile Include="MySQLMigration\NonpersistentTableDefCytologyOtherConditions.cs" />
@@ -3039,12 +3040,15 @@
     <Compile Include="MySQLMigration\NonpersistentTableDefCytologySAComments.cs" />
     <Compile Include="MySQLMigration\NonpersistentTableDefCytologyScreeningImpression.cs" />
     <Compile Include="MySQLMigration\NonpersistentTableDefFlowCommentV2.cs" />
+    <Compile Include="MySQLMigration\NonpersistentTableDefFlowMarkerPanel.cs" />
     <Compile Include="MySQLMigration\NonpersistentTableDefICD9Code.cs" />
     <Compile Include="MySQLMigration\NonpersistentTableDefImmunoComment.cs" />
     <Compile Include="MySQLMigration\NonpersistentTableDefMarkers.cs" />
+    <Compile Include="MySQLMigration\NonpersistentTableDefMaterialLocation.cs" />
     <Compile Include="MySQLMigration\NonpersistentTableDefOrderComment.cs" />
     <Compile Include="MySQLMigration\NonpersistentTableDefPanel.cs" />
     <Compile Include="MySQLMigration\NonpersistentTableDefPanelSet.cs" />
+    <Compile Include="MySQLMigration\NonpersistentTableDefPatient.cs" />
     <Compile Include="MySQLMigration\NonpersistentTableDefSpecimenAdequacy.cs" />
     <Compile Include="MySQLMigration\NonpersistentTableDefStainResultOption.cs" />
     <Compile Include="MySQLMigration\NonpersistentTableDefStainResultOptionGroup.cs" />
