--- a/YellowstonePathology/app.config
+++ b/YellowstonePathology/app.config
@@ -110,6 +110,9 @@
       <setting name="SqlServerConnectionString" serializeAs="String">
         <value>Data Source=TestSQL;Initial Catalog=YPIData;Integrated Security=True</value>
       </setting>
+      <setting name="MonitoredPropertyFolder" serializeAs="String">
+        <value>C:\Program Files\Yellowstone Pathology Institute\MonitoredProperty</value>
+      </setting>
     </YellowstonePathology.Properties.Settings>
   </userSettings>
 </configuration>
