--- a/YellowstonePathology/app.config
+++ b/YellowstonePathology/app.config
@@ -102,16 +102,13 @@
   <userSettings>
     <YellowstonePathology.Properties.Settings>
       <setting name="CurrentConnectionString" serializeAs="String">
-        <value>Server = 10.1.2.26; Uid = sqldude; Pwd = 123Whatsup; Database = test;</value>
+        <value>Server = 10.1.2.26; Uid = sqldude; Pwd = 123Whatsup; Database = lis;</value>
       </setting>
       <setting name="ChangeDBPassword" serializeAs="String">
         <value>changedb</value>
       </setting>
       <setting name="SqlServerConnectionString" serializeAs="String">
         <value>Data Source=TestSQL;Initial Catalog=YPIData;Integrated Security=True</value>
-      </setting>
-      <setting name="MySqlTestConnection" serializeAs="String">
-        <value>Server = 10.1.2.26; Uid = sqldude; Pwd = 123Whatsup; Database = test;</value>
       </setting>
       <setting name="MonitoredPropertyFolder" serializeAs="String">
         <value>C:\Program Files\Yellowstone Pathology Institute\MonitoredProperty</value>
