--- a/YellowstonePathology/UserInterface.csproj
+++ b/YellowstonePathology/UserInterface.csproj
@@ -3060,6 +3060,7 @@
     <Compile Include="MySQLMigration\NonpersistentTableDefICD9Code.cs" />
     <Compile Include="MySQLMigration\NonpersistentTableDefImmunoComment.cs" />
     <Compile Include="MySQLMigration\NonpersistentTableDefMarkers.cs" />
+    <Compile Include="MySQLMigration\NonpersistentTableDefMasterAccessionNo.cs" />
     <Compile Include="MySQLMigration\NonpersistentTableDefMaterialLocation.cs" />
     <Compile Include="MySQLMigration\NonpersistentTableDefOrderComment.cs" />
     <Compile Include="MySQLMigration\NonpersistentTableDefPanel.cs" />
@@ -3073,6 +3074,7 @@
     <Compile Include="MySQLMigration\NonpersistentTableDefTest.cs" />
     <Compile Include="MySQLMigration\NonpersistentTableDefWebServiceAccount.cs" />
     <Compile Include="MySQLMigration\NonpersistentTableDefWebServiceAccountClient.cs" />
+    <Compile Include="MySQLMigration\SqlServerFromMySqlRefresher.cs" />
     <Compile Include="MySQLMigration\TableForeignKey.cs" />
     <Compile Include="MySQLMigration\TableForeignKeyCollection.cs" />
     <Compile Include="MySQLMigration\TableIndex.cs" />
@@ -3324,6 +3326,9 @@
     </Compile>
     <Compile Include="UI\MySql\NonpersistentTableDialog.xaml.cs">
       <DependentUpon>NonpersistentTableDialog.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="UI\MySql\SqlServerRefreshDialog.xaml.cs">
+      <DependentUpon>SqlServerRefreshDialog.xaml</DependentUpon>
     </Compile>
     <Compile Include="UI\NHunspell.xaml.cs">
       <DependentUpon>NHunspell.xaml</DependentUpon>
@@ -5230,6 +5235,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="UI\MySql\NonpersistentTableDialog.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UI\MySql\SqlServerRefreshDialog.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
